# ima-evm-utils

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  INSTALL  LICENSES.txt  Makefile.am  NEWS  README  acinclude.m4  autogen.sh  build-static.sh  build.sh  configure.ac  evm-utils.spec.in  ima-evm-utils.spec.in
.github/workflows/: ci.yml
ci/: alpine.sh  alt.sh  debian.cross-compile.sh  debian.sh  fedora.sh  tumbleweed.sh  ubuntu.sh
doc/: Makefile.am
doc/sf/: Makefile.am  sf-diagram.html  sf-tcg.html  sf-wiki.md
examples/: ima-gen-local-ca-ecc.sh  ima-gen-local-ca.sh  ima-genkey-ecc.sh  ima-genkey-self-ecc.sh  ima-genkey-self.sh  ima-genkey.sh
kernel-configs/: base  integrity
m4/: default-hash-algo.m4  manpage-docbook-xsl.m4
packaging/: ima-evm-utils.spec  ima-evm-utils.spec.in
src/: .gitignore  Makefile.am  evmctl.c  hash_info.gen  imaevm.h  libevm.c  libevm.h  libimaevm.c  pcr.h  pcr_ibmtss.c  pcr_none.c  pcr_tss.c  pcr_tsspcrread.c  utils.c  utils.h
tests/: .gitignore  Makefile.am  boot_aggregate.test  evm_enable.sh  evm_genkey.sh  evm_hmac.test  evm_hmac_all.sh  evm_hmac_modules.sh  evm_sign_all.sh  evm_sign_modules.sh  fsverity.test  functions.sh  gen-keys.sh  ima_fix_dir.sh  ima_hash.test  ima_overlay.test  ima_policy_check.awk  ima_policy_check.test  install-fsverity.sh  install-mount-idmapped.sh  install-openssl3.sh  install-swtpm.sh  install-tpm2-tss.sh  install-tss.sh  mmap_check.test  openclose.c  portable_signatures.test  sample-ascii_runtime_measurements-pcrs-8-9  sample-binary_bios_measurements-pcrs-8-9  sample-tpm-2.0-pcrs-8-9  sign_modules_dir.sh  sign_verify.test  softhsm_setup  test_ascii_runtime_measurements  test_binary_bios_measurements  test_mmap.c
travis/: fedora.sh  tumbleweed.sh
